CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/sfrosit_t_cw_addnl_info_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_cw_addnl_info_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_cw_addnl_info_hist</externalName>
    <label>CW Addl Info History</label>
    <pluralLabel>CW Addl Info History</pluralLabel>
</CustomObject>