CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/cde_prog_area__c.field-meta.xml
<CustomField>
    <fullName>cde_prog_area__c</fullName>
    <description>cde_prog_area</description>
    <externalDeveloperName>cde_prog_area</externalDeveloperName>
    <label>Area Program Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>