CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/idn_case_referal__c.field-meta.xml
<CustomField>
    <fullName>idn_case_referal__c</fullName>
    <description>idn_case_referal</description>
    <externalDeveloperName>idn_case_referal</externalDeveloperName>
    <label>Case Referal ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>