CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/idn_cw_addnl_info__c.field-meta.xml
<CustomField>
    <fullName>idn_cw_addnl_info__c</fullName>
    <description>idn_cw_addnl_info</description>
    <externalDeveloperName>idn_cw_addnl_info</externalDeveloperName>
    <label>CW Additional Information ID</label>
    <length>50</length>
    <referenceTargetField>T_CW_ADDNL_INFO__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_CW_ADDNL_INFO__c</referenceTo>
    <relationshipLabel>CW Details Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_cw_addnl_info_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>