CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/idn_cw_addnl_info_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_cw_addnl_info_hist__c</fullName>
    <description>idn_cw_addnl_info_hist</description>
    <externalDeveloperName>idn_cw_addnl_info_hist</externalDeveloperName>
    <label>CW Additional Information ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>