CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/idn_mapng_intfc__c.field-meta.xml
<CustomField>
    <fullName>idn_mapng_intfc__c</fullName>
    <description>idn_mapng_intfc</description>
    <externalDeveloperName>idn_mapng_intfc</externalDeveloperName>
    <label>Mapping interface</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>