CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/idn_state__c.field-meta.xml
<CustomField>
    <fullName>idn_state__c</fullName>
    <description>idn_state</description>
    <externalDeveloperName>idn_state</externalDeveloperName>
    <label>State ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>