CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/ind_record_delete_logcl__c.field-meta.xml
<CustomField>
    <fullName>ind_record_delete_logcl__c</fullName>
    <description>ind_record_delete_logcl</description>
    <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
    <label>Logical Deleted Record</label>
    <length>1</length>
    <type>Text</type>
</CustomField>