CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/rec_moe__c.field-meta.xml
<CustomField>
    <fullName>rec_moe__c</fullName>
    <description>rec_moe</description>
    <externalDeveloperName>rec_moe</externalDeveloperName>
    <label>Maintenance of Effort Record</label>
    <length>1</length>
    <type>Text</type>
</CustomField>