CHATS_SIT/force-app/main/default/objects/sfrosit_t_cw_addnl_info_hist__x/fields/tanf_rcvng__c.field-meta.xml
<CustomField>
    <fullName>tanf_rcvng__c</fullName>
    <description>tanf_rcvng</description>
    <externalDeveloperName>tanf_rcvng</externalDeveloperName>
    <label>TANF Receving</label>
    <length>1</length>
    <type>Text</type>
</CustomField>